apps/ssc/traefik-upload-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: fortify-upload-buffer
  namespace: ${NAMESPACE}
spec:
  buffering:
    maxRequestBodyBytes: 1073741824
