apps/ssc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssc-ingress
  namespace: ${NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1G"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: "https"
    traefik.ingress.kubernetes.io/router.middlewares: "${TRAEFIK_SSC_UPLOAD_MIDDLEWARE}"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - ${SSC}
    secretName: tls

  rules:
  - host: ${SSC}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ssc-service
            port:
              number: 443
